--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This is the 2nd part of maia which communicates with the backend",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,8 +11,11 @@
   "author": "Basil Ismail",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
+    "openai": "^4.97.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   }
